gitlab-svc-lb.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    name: gitlab
    type: LoadBalancer
  name: gitlab-balancer
  namespace: gitlab
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    name: gitlab
  type: NodePort
